[package]
name = "app"
version = "1.1.0"
description = "cm2labs Tauri v2 Template - Encrypted Vault"
authors = ["cm2labs"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
aes-gcm = "0.10"
rand = "0.8"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
